@@ -1,5 +1,6 @@
 FROM navikt/java:14
 COPY target/*.jar "/app/app.jar"
+ENV JAVA_OPTS --enable-preview
 ENV APPD_ENABLED=true
 ENV APP_NAME=foreldrepengesoknad-api
 ENV APPDYNAMICS_CONTROLLER_HOST_NAME=appdynamics.adeo.no
